--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <iframe
       src="./portfolio.pdf"
-      style="width: 100%; height: 100%; border: none"
+      style="width: 100%; height: 100vh; border: none"
     ></iframe>
   </body>
 </html>
